--- a/style.css
+++ b/style.css
@@ -1,79 +1,143 @@
 @import url('https://fonts.googleapis.com/css2?family=Hurricane&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Passions+Conflict&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Passions+Conflict&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 
 
-body{
-    /* background: #80ebb9; */
-    background: #f3e0a2;
-    display: grid;
-    place-items: center;
-    height: 100vh;
-    margin: 0;
+    :root {
+  --primary: #FFCE00;
+  --secondary: #FE4880;
+  --dark: #212121;
+  --light: #F3F3F3;
 }
 
-.card{
-    background: #eea3a3de;
-    border-radius: 7px;
-    height: 85vh;
-    width: 80vw;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16) 0 3px 6px rgba(0, 0, 0, 0.24) ;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 0.5em;
-    box-shadow: 10px 10px rgba(224, 10, 10, 0.623);
+* {
+  margin: 0;
+  padding: 0;
 }
 
-img.birthday{
-    max-height: 40vh;
-    
+body {
+  font-family: montserrat, sans-serif;
+  width: 100%;
+  min-height: 100vh;
+}
+
+.card {
+  margin: 100px auto 0;
+  width: 400px;
+  height: 600px;
+  perspective: 1000px;
+}
+
+.card__inner {
+  width: 100%;
+  height: 100%;
+  transition: transform 1s;
+  transform-style: preserve-3d;
+  cursor: pointer;
+  position: relative;
+}
+
+.card__inner.is-flipped {
+  transform: rotateY(180deg);
+}
+
+
+.card__face {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  overflow: hidden;
+  border-radius: 16px;
+  box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 0.2);
+}
+
+.card__face--front {
+  background-image: linear-gradient(to bottom right, var(--primary), var(--secondary));
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card__face--front h2 {
+  color: #FFF;
+  font-size: 62px;
+  font-family: 'Indie Flower', cursive;
+}
+
+.card__face--back {
+  background-color: blanchedalmond;
+  transform: rotateY(180deg);
+}
+
+.card__content {
+  width: 100%;
+  height: 100%;
+}
+
+.card__header {
+  position: relative;
+  padding: 30px 30px 40px;
+}
+
+.card__header:after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: linear-gradient(to bottom left, var(--primary) 10%, var(--secondary) 115%);
+  z-index: -1;
+  border-radius: 0px 0px 50% 0px;
+}
+
+
+
+.card__body {
+  padding: 20px;
+}
+
+
+.card__body p {
+  color: var(--dark);
+  font-size: 18px;
+  line-height: 1.4;
+}
+
+.photo{
+  width: 350px;
+  height: 350px;
+  object-fit: cover;
+
 }
 
 h1{
     font-family: 'Hurricane', cursive;
-    font-size: 4vw;
+    font-size: 30px;
     text-decoration: underline double rgb(3, 19, 245);
     color: crimson;
-}
+    margin-left: 30px;
+  }
 
-.muted{
-    opacity: 0.8;
-    font-family: 'Passions Conflict', cursive;
-    font-size: 5vh;
-    /* text-decoration: underline wavy rgb(166, 240, 30); */
-    color: indigo;
-    margin: 0;
-    padding: 0;
-    /* -webkit-animation: glow 1s ease-in-out infinite alternate;
-  -moz-animation: glow 1s ease-in-out infinite alternate; */
-  animation: glow 1s ease-in-out infinite alternate;
+
+p.muted{
+  font-size: 40px;
+  color: teal;
+  opacity: 0.8;
+  font-family: 'Passions Conflict', cursive;
+  margin-left: 50px;
+  font-weight: 600;
 
 }
 
-p{
+p.text{
   font-family: 'Bebas Neue', cursive;
   font-size: x-large;
-  color: rgba(54, 102, 14, 0.74);
-  text-shadow: rgb(50, 228, 175) 2px 2.8px;
+  color: rgba(190, 11, 110, 0.74);
+  text-shadow: springgreen 2px 2.8px;
+  margin-left: 20px;
 }
-
-@media only screen and (max-width: 1000px)  {
-  h1{
-    font-size: 5vh;
-  }
-
-  .muted{
-    font-size: 6vh;
-  }
-}
-
-@keyframes glow {
-    from {
-      text-shadow: 0 0 10px darkviolet, 0 0 20px darkviolet, 0 0 30px darkviolet, 0 0 40px darkviolet, 0 0 50px darkviolet, 0 0 60px darkviolet, 0 0 70px darkviolet;
-    }
-    to {
-      /* text-shadow: 0 0 20px darkviolet, 0 0 30px darkviolet, 0 0 40px darkviolet, 0 0 50px darkviolet, 0 0 60px darkviolet, 0 0 70px darkviolet, 0 0 80px darkviolet; */
-    }
-  }
